# xresloader-pure-proto

./: .gitmodules  CMakeLists.txt
protocols/extensions/v2/: xresloader.proto
protocols/extensions/v3/: xresloader.proto
pure_proto/: CMakeLists.txt  desc.cpp  desc.h  gen.bat  main.cpp
pure_proto/pb/: pb_header_v3.pb.cc  pb_header_v3.pb.h  xrescode_extensions_v3.pb.cc  xrescode_extensions_v3.pb.h
pure_proto/pb/google/protobuf/: descriptor.pb.h
pure_proto/pb/v3/: xresloader.pb.cc  xresloader.pb.h  xresloader_ue.pb.cc  xresloader_ue.pb.h
